Used JWT to generate token

--- a/server/User Auth/.env
+++ b/server/User Auth/.env
@@ -8,3 +8,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:yashwanthnaidu@localhost:5432/streamingzone?schema=public"
+JWT_SECRET="ecfed6bc-9e63-4d29-9cb9-e2b47cf87b7f"
+PORT=8000
