--- a/server/Live Streaming/package.json
+++ b/server/Live Streaming/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "kafkajs": "^2.2.4",
     "mongoose": "^8.3.4",
     "socket.io": "^4.7.5"
   },
