--- a/server/Live Streaming/docker-compose.yml
+++ b/server/Live Streaming/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       context: .
       dockerfile: ./Dockerfile
     volumes:
-      - ./:/home/app
+      - ./:/app
     ports:
       - 8000:8000
     environment:
