--- a/server/Email Service/.env
+++ b/server/Email Service/.env
@@ -1,2 +1,2 @@
-set SMTP_USERNAME=ysgaming2003@gmail.com
-set SMTP_PASSWORD=lvbq koun arsl tpln
+SMTP_USERNAME=ysgaming2003@gmail.com
+SMTP_PASSWORD=lvbq koun arsl tpln
